--- a/config/crd/bases/kubepark.sinoa.jp_sandboxes.yaml
+++ b/config/crd/bases/kubepark.sinoa.jp_sandboxes.yaml
@@ -2380,6 +2380,16 @@ spec:
               image:
                 description: Image is the Docker image to use for the sandbox.
                 type: string
+              imagePullPolicy:
+                description: |-
+                  ImagePullPolicy describes a policy for if/when to pull a container image.
+                  Valid values are Always, Never, IfNotPresent.
+                  Defaults to Always if :latest tag is specified, or IfNotPresent otherwise.
+                enum:
+                - Always
+                - Never
+                - IfNotPresent
+                type: string
               imagePullSecrets:
                 description: ImagePullSecrets is an optional list of references to
                   secrets in the same namespace to use for pulling any of the images.
