feat: Add SSH username support and improve test coverage
- Add SSH username field to SandboxSpec and SSHConfig
- Support SSH_USERNAME environment variable in sandbox containers
- Add comprehensive test cases for SSH username functionality
- Add tests for Container configuration (resources, env vars)
- Add tests for advanced Pod settings (HostNetwork, ServiceAccount, etc.)
- Add tests for SandboxTemplate integration with username override
- Add tests for ImagePullPolicy defaults and ConfigMap updates
- Improve test coverage from ~30% to 54.9%
- Fix resource quantity comparisons in tests
- Update CRD definitions and sample configurations
- Update sandbox-ssh Docker image to support SSH_USERNAME

--- a/config/crd/bases/kubepark.sinoa.jp_sandboxes.yaml
+++ b/config/crd/bases/kubepark.sinoa.jp_sandboxes.yaml
@@ -2434,6 +2434,11 @@ spec:
                     description: PublicKey is the SSH public key to use for accessing
                       the sandbox.
                     type: string
+                  username:
+                    description: |-
+                      Username is the SSH username to use for accessing the sandbox.
+                      Defaults to "sandbox" if not specified.
+                    type: string
                 type: object
               terminationGracePeriodSeconds:
                 description: TerminationGracePeriodSeconds is the duration in seconds
